[gd_scene load_steps=6 format=3 uid="uid://3nch16ortqkh"]

[ext_resource type="Script" uid="uid://bi2t2x3kd4gr5" path="res://options_menu.gd" id="1_f6s6f"]
[ext_resource type="FontFile" uid="uid://bqrjk7kleqkfk" path="res://Fonts/Buka Bird.ttf" id="2_wvl83"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f6s6f"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 2
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wvl83"]
bg_color = Color(3.03224e-06, 0.725266, 0.206758, 1)
border_width_left = 5
border_width_top = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 5
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_htqdc"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_offset = Vector2(3, 3)

[node name="Options_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f6s6f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -554.0
offset_top = -365.0
offset_right = 543.0
offset_bottom = 259.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_wvl83")
theme_override_font_sizes/font_size = 55
text = "Master"

[node name="MasterSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.01

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_wvl83")
theme_override_font_sizes/font_size = 55
text = "Music"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.01

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_wvl83")
theme_override_font_sizes/font_size = 55
text = "Sfx"

[node name="SfxSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.01

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_wvl83")
theme_override_font_sizes/font_size = 55
text = "Menu"

[node name="MenuSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.01

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = 324.0
offset_right = 101.0
offset_bottom = 394.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_wvl83")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_f6s6f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wvl83")
theme_override_styles/normal = SubResource("StyleBoxFlat_htqdc")
text = "Back"

[connection signal="value_changed" from="VBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SfxSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MenuSlider" to="." method="_on_menu_slider_value_changed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
